feat: add structure (wip)

--- a/index.html
+++ b/index.html
@@ -4,15 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+        
     <link rel="stylesheet" href="./css/style.css" />
 </head>
 <body>
     <main class="wrapper">
         <div class="top-col">
-            <div class="left-col"></div>
+            <div class="left-col">
+                <div class="side-bar-items">
+                    <img src="logo" alt="">
+                    <ul class="side-bar-list">
+                        <li>
+                            <!-- <span<i class="fa-solid fa-house"></i></span> -->
+                            <span>Home</span>
+                        </li>
+                        <li>
+                            <!-- <span<i class="fa-solid fa-house"></i></span> -->
+                            <span>Cerca</span>
+                        </li>
+                        <li>
+                            <!-- <span<i class="fa-solid fa-house"></i></span> -->
+                            <span>La tua libreria</span>
+                        </li>
+                        <li>
+                            <h4>Playlist</h4>
+                        </li>
+                        <li>
+                            <!-- <span<i class="fa-solid fa-house"></i></span> -->
+                            <span>Crea Playlist</span>
+                        </li>
+                        <li><a href="">Nome Playlist</a></li>
+                        <li><a href=""> Nome Playlist </a></li>
+                        <li><a href=""> Nome Playlist </a></li>
+
+                </div>
+            </div>
             <div class="right-col">
                 <div class="header"></div>
-                <div class="content"></div>
+                <div class="content">
+                    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis consequatur cupiditate repellendus qui omnis, at pariatur voluptates aut minima. Rem non molestias sunt officia dolores quis odio, repellat suscipit. Perferendis.</div>
+
+                </div>
             </div>
         </div>
 
