feat:side-bar (wip)

--- a/index.html
+++ b/index.html
@@ -13,59 +13,46 @@
         <div class="top-col">
             <div class="left-col">
                 <div class="side-bar-items">
-                    <img src="logo" alt="">
-                    <ul class="side-bar-list">
+                    <div class="side-top">
+                        <img src="./css/img/logo-small.svg" alt="" class="logo-img">
+                        <ul class="side-bar-list">
+                            <li>
+                                <span><i class="fa-solid fa-house"></i></span>
+                                <span>Home</span>
+                            </li>
+                            <li>
+                                <span><i class="fa-solid fa-magnifying-glass"></i></span>
+                                <span>Cerca</span>
+                            </li>
+                            <li>
+                                <span><i class="fa-solid fa-book"></i></span>
+                                <span>La tua libreria</span>
+                            </li>
+                            <li>
+                                <h4>Playlist</h4>
+                                </li>
                         <li>
-                            <!-- <span<i class="fa-solid fa-house"></i></span> -->
-                            <span>Home</span>
-                        </li>
-                        <li>
-                            <!-- <span<i class="fa-solid fa-house"></i></span> -->
-                            <span>Cerca</span>
-                        </li>
-                        <li>
-                            <!-- <span<i class="fa-solid fa-house"></i></span> -->
-                            <span>La tua libreria</span>
-                        </li>
-                        <li>
-                            <h4>Playlist</h4>
-                        </li>
-                        <li>
-                            <!-- <span<i class="fa-solid fa-house"></i></span> -->
+                            <span><i class="fa-solid fa-square-plus"></i></span>
                             <span>Crea Playlist</span>
                         </li>
                         <li><a href="">Nome Playlist</a></li>
                         <li><a href=""> Nome Playlist </a></li>
                         <li><a href=""> Nome Playlist </a></li>
+                    </div>
+                    <div class="side-bottom">
+                        <span><i class="fa-regular fa-circle-down"></i></span>
+                        <span>Installa app</span>
+                        <hr class="divider">
 
+                    </div>
                 </div>
             </div>
             <div class="right-col">
-                <div class="header"></div>
+                <div class="header">
+                    <a href="" class="btn">EFFETTUA L'UPGRADE</a>
+                </div>
                 <div class="content">
-                    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis consequatur cupiditate repellendus qui omnis, at pariatur voluptates aut minima. Rem non molestias sunt officia dolores quis odio, repellat suscipit. Perferendis.</div>
-                    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis consequatur cupiditate repellendus qui omnis, at pariatur voluptates aut minima. Rem non molestias sunt officia dolores quis odio, repellat suscipit. Perferendis.</div>
-                    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis consequatur cupiditate repellendus qui omnis, at pariatur voluptates aut minima. Rem non molestias sunt officia dolores quis odio, repellat suscipit. Perferendis.</div>
-                    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis consequatur cupiditate repellendus qui omnis, at pariatur voluptates aut minima. Rem non molestias sunt officia dolores quis odio, repellat suscipit. Perferendis.</div>
-                    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis consequatur cupiditate repellendus qui omnis, at pariatur voluptates aut minima. Rem non molestias sunt officia dolores quis odio, repellat suscipit. Perferendis.</div>
-                    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis consequatur cupiditate repellendus qui omnis, at pariatur voluptates aut minima. Rem non molestias sunt officia dolores quis odio, repellat suscipit. Perferendis.</div>
-                    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis consequatur cupiditate repellendus qui omnis, at pariatur voluptates aut minima. Rem non molestias sunt officia dolores quis odio, repellat suscipit. Perferendis.</div>
-                    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis consequatur cupiditate repellendus qui omnis, at pariatur voluptates aut minima. Rem non molestias sunt officia dolores quis odio, repellat suscipit. Perferendis.</div>
-                    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis consequatur cupiditate repellendus qui omnis, at pariatur voluptates aut minima. Rem non molestias sunt officia dolores quis odio, repellat suscipit. Perferendis.</div>
-                    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis consequatur cupiditate repellendus qui omnis, at pariatur voluptates aut minima. Rem non molestias sunt officia dolores quis odio, repellat suscipit. Perferendis.</div>
-                    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis consequatur cupiditate repellendus qui omnis, at pariatur voluptates aut minima. Rem non molestias sunt officia dolores quis odio, repellat suscipit. Perferendis.</div>
-                    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis consequatur cupiditate repellendus qui omnis, at pariatur voluptates aut minima. Rem non molestias sunt officia dolores quis odio, repellat suscipit. Perferendis.</div>
-                    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis consequatur cupiditate repellendus qui omnis, at pariatur voluptates aut minima. Rem non molestias sunt officia dolores quis odio, repellat suscipit. Perferendis.</div>
-                    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis consequatur cupiditate repellendus qui omnis, at pariatur voluptates aut minima. Rem non molestias sunt officia dolores quis odio, repellat suscipit. Perferendis.</div>
-                    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis consequatur cupiditate repellendus qui omnis, at pariatur voluptates aut minima. Rem non molestias sunt officia dolores quis odio, repellat suscipit. Perferendis.</div>
-                    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis consequatur cupiditate repellendus qui omnis, at pariatur voluptates aut minima. Rem non molestias sunt officia dolores quis odio, repellat suscipit. Perferendis.</div>
-                    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis consequatur cupiditate repellendus qui omnis, at pariatur voluptates aut minima. Rem non molestias sunt officia dolores quis odio, repellat suscipit. Perferendis.</div>
-                    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis consequatur cupiditate repellendus qui omnis, at pariatur voluptates aut minima. Rem non molestias sunt officia dolores quis odio, repellat suscipit. Perferendis.</div>
-                    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis consequatur cupiditate repellendus qui omnis, at pariatur voluptates aut minima. Rem non molestias sunt officia dolores quis odio, repellat suscipit. Perferendis.</div>
-                    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis consequatur cupiditate repellendus qui omnis, at pariatur voluptates aut minima. Rem non molestias sunt officia dolores quis odio, repellat suscipit. Perferendis.</div>
-                    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis consequatur cupiditate repellendus qui omnis, at pariatur voluptates aut minima. Rem non molestias sunt officia dolores quis odio, repellat suscipit. Perferendis.</div>
-                    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis consequatur cupiditate repellendus qui omnis, at pariatur voluptates aut minima. Rem non molestias sunt officia dolores quis odio, repellat suscipit. Perferendis.</div>
-                    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis consequatur cupiditate repellendus qui omnis, at pariatur voluptates aut minima. Rem non molestias sunt officia dolores quis odio, repellat suscipit. Perferendis.</div>
+                    
                   
 
                 </div>
