feat: add side-bar details

--- a/index.html
+++ b/index.html
@@ -14,26 +14,31 @@
             <div class="left-col">
                 <div class="side-bar-items">
                     <div class="side-top">
-                        <img src="./css/img/logo-small.svg" alt="" class="logo-img">
+                        <div class="spotify">
+                            <img src="./css/img/logo-small.svg" alt="" class="logo-img">
+                            <span class="brand">Spotify</span>
+                        </div>
                         <ul class="side-bar-list">
                             <li>
-                                <span><i class="fa-solid fa-house"></i></span>
+                                <span><i class="fa-solid fa-house span-big"></i></span>
                                 <span>Home</span>
                             </li>
                             <li>
-                                <span><i class="fa-solid fa-magnifying-glass"></i></span>
+                                <span><i class="fa-solid fa-magnifying-glass span-big"></i></span>
                                 <span>Cerca</span>
                             </li>
                             <li>
-                                <span><i class="fa-solid fa-book"></i></span>
+                                <span><i class="fa-solid fa-book span-big"></i></span>
                                 <span>La tua libreria</span>
                             </li>
                             <li>
-                                <h4>Playlist</h4>
+                                <h4>PLAYLIST</h4>
                                 </li>
                         <li>
-                            <span><i class="fa-solid fa-square-plus"></i></span>
-                            <span>Crea Playlist</span>
+                            <div classe="crea-playlist">
+                                <span><i class="fa-solid fa-square-plus logo span-bigger"></i></span>
+                                <span class="title">Crea Playlist</span>
+                            </div>
                         </li>
                         <li><a href="">Nome Playlist</a></li>
                         <li><a href=""> Nome Playlist </a></li>
@@ -43,6 +48,12 @@
                         <span><i class="fa-regular fa-circle-down"></i></span>
                         <span>Installa app</span>
                         <hr class="divider">
+                        <div class="john-doe">
+                            <img src="./css/img/profile.svg" alt="" class="circle-profile">
+                            <span class="john-doe-title">John Doe</span>
+                        </div>
+
+
 
                     </div>
                 </div>
