feat: add content

--- a/index.html
+++ b/index.html
@@ -52,12 +52,10 @@
                             <img src="./css/img/profile.svg" alt="" class="circle-profile">
                             <span class="john-doe-title">John Doe</span>
                         </div>
-
-
-
                     </div>
                 </div>
             </div>
+
             <div class="right-col">
                 <div class="header">
                     <a href="" class="btn">EFFETTUA L'UPGRADE</a>
@@ -78,35 +76,35 @@
                             <div class="album-col">
                                 <div class="card">
                                     <img src="./css/img/stranger.jpeg" alt="">
-                                    <h4>Heavy Metal</h4>
+                                    <h4>Stranger Things,Vol.1(a Netflix Original Series Soundtrack)</h4>
                                     <h5>Subtitle</h5>
                                 </div>   
                             </div>
                             <div class="album-col">
                                 <div class="card">
                                     <img src="./css/img/aquietplace.jpeg" alt="">
-                                    <h4>Heavy Metal</h4>
+                                    <h4>A quiet place</h4>
                                     <h5>Subtitle</h5>
                                 </div>   
                             </div>
                             <div class="album-col">
                                 <div class="card">
                                     <img src="./css/img/split.jpeg" alt="">
-                                    <h4>Heavy Metal</h4>
+                                    <h4>Split</h4>
                                     <h5>Subtitle</h5>
                                 </div>   
                             </div>
                             <div class="album-col">
                                 <div class="card">
                                     <img src="./css/img/cure.jpeg" alt="">
-                                    <h4>Heavy Metal</h4>
+                                    <h4>A cure for wellness</h4>
                                     <h5>Subtitle</h5>
                                 </div>   
                             </div>
                             <div class="album-col">
                                 <div class="card">
                                     <img src="./css/img/sinister.jpeg" alt="">
-                                    <h4>Heavy Metal</h4>
+                                    <h4>Sinister</h4>
                                     <h5>Subtitle</h5>
                                 </div>   
                             </div>
@@ -124,15 +122,13 @@
                             <div class="album-col">
                                 <div class="card">
                                     <img src="./css/img/radar.jpeg" alt="">
-                                    <h4>Heavy Metal</h4>
-                                    <h5>Subtitle</h5>
+                                    <h4>Release Radar</h4>
                                 </div>
                              </div>
                             <div class="album-col">
                                 <div class="card">
                                     <img src="./css/img/mixdaily.jpeg" alt="">
-                                    <h4>Heavy Metal</h4>
-                                    <h5>Subtitle</h5>
+                                    <h4>Daily Mix 1</h4>
                                 </div>
                              </div>
                         </div>
@@ -148,16 +144,14 @@
                         <div class="albums-row">
                             <div class="album-col">
                                 <div class="card">
-                                    <img src="./css/img/youg.jpeg" alt="">
-                                    <h4>Heavy Metal</h4>
-                                    <h5>Subtitle</h5>
+                                    <img src="./css/img/youg.jpeg" alt="" class="circle-album">
+                                    <h4>Youg</h4>
                                 </div>
                             </div>
                             <div class="album-col">
                                 <div class="card">
-                                    <img src="./css/img/einaudi.jpeg" alt="">
-                                    <h4>Heavy Metal</h4>
-                                    <h5>Subtitle</h5>
+                                    <img src="./css/img/einaudi.jpeg" alt="" class="circle-album">
+                                    <h4>Einaudi</h4>
                                 </div>
                             </div>
                         </div>
