feat: add responsive (wip)

--- a/index.html
+++ b/index.html
@@ -21,32 +21,34 @@
                         <ul class="side-bar-list">
                             <li>
                                 <span><i class="fa-solid fa-house span-big"></i></span>
-                                <span>Home</span>
+                                <span class="home">Home</span>
                             </li>
                             <li>
                                 <span><i class="fa-solid fa-magnifying-glass span-big"></i></span>
-                                <span>Cerca</span>
+                                <span class="cerca">Cerca</span>
                             </li>
                             <li>
                                 <span><i class="fa-solid fa-book span-big"></i></span>
-                                <span>La tua libreria</span>
+                                <span class="library">La tua libreria</span>
                             </li>
                             <li>
-                                <h4>PLAYLIST</h4>
-                                </li>
-                        <li>
-                            <div classe="crea-playlist">
-                                <span><i class="fa-solid fa-square-plus logo span-bigger"></i></span>
-                                <span class="title">Crea Playlist</span>
-                            </div>
-                        </li>
-                        <li><a href="">Nome Playlist</a></li>
-                        <li><a href=""> Nome Playlist </a></li>
-                        <li><a href=""> Nome Playlist </a></li>
+                                <h4 class="playlist">PLAYLIST</h4>
+                            </li>
+                            <li class="crea-playlist1">
+                                <div classe="crea-playlist">
+                                    <span><i class="fa-solid fa-square-plus logo span-bigger"></i></span>
+                                    <span class="title">Crea Playlist</span>
+                                </div>
+                            </li>
+                            <ul class="new-playlist">
+                                <li><a href="" >Nome Playlist</a></li>
+                                <li><a href=""> Nome Playlist </a></li>
+                                <li><a href=""> Nome Playlist </a></li>
+                            </ul>
                     </div>
                     <div class="side-bottom">
                         <span><i class="fa-regular fa-circle-down"></i></span>
-                        <span>Installa app</span>
+                        <span class="install-app">Installa app</span>
                         <hr class="divider">
                         <div class="john-doe">
                             <img src="./css/img/profile.svg" alt="" class="circle-profile">
@@ -157,11 +159,6 @@
                         </div>
                     </section>
                     <!--/Artisti piu'popolari SECTION-->
-
-
-
-
-
 
                 </div>
             </div>
