feat:add content nav bar

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <main class="wrapper">
         <div class="top-col">
             <div class="left-col">
+                <!-- SIDE BAR -->
                 <div class="side-bar-items">
                     <div class="side-top">
                         <div class="spotify">
@@ -21,7 +22,7 @@
                         <ul class="side-bar-list">
                             <li>
                                 <span><i class="fa-solid fa-house span-big"></i></span>
-                                <span class="home">Home</span>
+                                <span class="home white">Home</span>
                             </li>
                             <li>
                                 <span><i class="fa-solid fa-magnifying-glass span-big"></i></span>
@@ -32,7 +33,7 @@
                                 <span class="library">La tua libreria</span>
                             </li>
                             <li>
-                                <h4 class="playlist">PLAYLIST</h4>
+                                <h4 class="playlist white">PLAYLIST</h4>
                             </li>
                             <li class="crea-playlist1">
                                 <div classe="crea-playlist">
@@ -48,7 +49,7 @@
                     </div>
                     <div class="side-bottom">
                         <span><i class="fa-regular fa-circle-down"></i></span>
-                        <span class="install-app">Installa app</span>
+                        <span class="install-app grey">Installa app</span>
                         <hr class="divider">
                         <div class="john-doe">
                             <img src="./css/img/profile.svg" alt="" class="circle-profile">
@@ -56,13 +57,33 @@
                         </div>
                     </div>
                 </div>
+                <!-- /SIDE BAR -->
             </div>
 
+            <!-- HEADER -->
             <div class="right-col">
                 <div class="header">
                     <a href="" class="btn">EFFETTUA L'UPGRADE</a>
                 </div>
+                <!-- /HEADER -->
+
+                <!-- CONTENT -->
                 <div class="content">
+
+                    <!-- NAV-BAR -->
+                    <section class="nav-bar">
+                        <div class="nav-menu">
+                            <ul class="nav-menu-list">
+                                <li><a href="">IN EVIDENZA</a></li>
+                                <li><a href="">PODCAST</a></li>
+                                <li><a href="">CLASSIFICHE</a></li>
+                                <li><a href="">GENERI E MOOD</a></li>
+                                <li><a href="">NUOVE USCITE</a></li>
+                                <li><a href="">SCOPRI</a></li>
+                            </ul>
+                        </div>
+                    </section>
+                    <!--/ NAV-BAR -->
                     
                     <!-- RECENTLY PLAYED SECTION -->
                     <section class="recently-played-albums">
@@ -164,6 +185,7 @@
             </div>
         </div>
 
+        <!-- FOOTER -->
         <div class="bottom-col"></div>
 
 
